# differential_gt

./: .gitignore  CMakeLists.txt  package.xml
config/: coop_controller_state_multiplot.xml  diff_game_theory_controller_state_6dof_x_case_multiplot.xml  diff_game_theory_controller_state_multiplot.xml  estimated_forces_multiplot.xml  joints_states_velocities_efforts_multiplot.xml  state_control_multiplot.xml  state_control_multiplot1.xml
include/differential_gt/: cgt.h  ncgt.h
launch/: cgt_demo.launch  dgt.launch  dgt_6dof.launch  dgt_6dof_external_human_robot_refs.launch  diff_game_theory_6dof.launch  ncgt_demo.launch
src/differential_gt/: alpha_publisher.py  cgt.cpp  cgt_ros_node.cpp  dgt_node.cpp  dgtn.cpp  dgtn_6dof.cpp  dgtn_6dof_external_human_robot_refs.cpp  diff_game_theory_node.cpp  diff_game_theory_node_6dof.cpp  human_reference_publisher.py  ncgt.cpp  ncgt_ros_node.cpp  robot_reference_publisher.py
